# lampa-homestream

./: .gitignore  README.md  docker-compose.yml  homestream.js  local-media.js  setup.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-build.yml  plugin-build.yml  test.yml
backend/: .dockerignore  Dockerfile  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: models.py  routes.py
backend/app/matcher/: matcher.py  nfo_reader.py  parser.py  tmdb_client.py
backend/app/scanner/: file_filter.py  scanner.py  smb_source.py
backend/app/streaming/: proxy.py
backend/app/utils/: helpers.py  logging.py
backend/data/: library.db
backend/lampa_local_media_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: test_api.py  test_file_filter.py  test_matcher.py  test_parser.py
config/: config.example.yaml
docs/: config-reference.md  folder-naming.md  setup-guide.md  troubleshooting.md
plugin/: package-lock.json  package.json  rollup.config.js
plugin/src/: api-client.js  component.js  constants.js  episode-component.js  index.js  lang.js  menu.js  play-button.js  settings.js  styles.js  templates.js  unmatched-component.js  utils.js  watch-progress.js
spikes/: README.md  spike1_smb_connect.py  spike2_guessit_parse.py  spike3_lampa_fetch.js  spike4_lampa_player.js  spike5_lampa_detail.js
